fix: applied SQ suggestions and bump message broker's sdk